cmake_minimum_required(VERSION 2.8.12)
project(SimGridMasterWorker)

set(CMAKE_C_FLAGS "--std=c99")

#set(CMAKE_C_FLAGS "--std=c99 -g")
#set(CMAKE_EXE_LINKER_FLAGS "/usr/local/lib/libprofiler.so")

find_library(SIMGRID_LIBRARY NAMES simgrid)

add_executable(master_worker_v3_10 ./masterworker-v3_10.c)
add_executable(master_worker_v3_12 ./masterworker-v3_10.c)
add_executable(master_worker_v3_14 ./masterworker-v3_14.c)
add_executable(master_worker_v3_15 ./masterworker-v3_14.c)
add_executable(master_worker_v3_16 ./masterworker-v3_14.c)
add_executable(master_worker_v3_20 ./masterworker-v3_20.cpp)
add_executable(master_worker_v3_24 ./masterworker-v3_24.cpp)
add_executable(master_worker_v3_34 ./masterworker-v3_34.cpp)
add_executable(master_worker_v3_35 ./masterworker-v3_34.cpp)

target_link_libraries(master_worker_v3_10 ${SIMGRID_LIBRARY})
target_link_libraries(master_worker_v3_12 ${SIMGRID_LIBRARY})
target_link_libraries(master_worker_v3_14 ${SIMGRID_LIBRARY})
target_link_libraries(master_worker_v3_15 ${SIMGRID_LIBRARY})
target_link_libraries(master_worker_v3_16 ${SIMGRID_LIBRARY})
target_link_libraries(master_worker_v3_20 ${SIMGRID_LIBRARY})
target_link_libraries(master_worker_v3_24 ${SIMGRID_LIBRARY})
target_link_libraries(master_worker_v3_34 ${SIMGRID_LIBRARY})
target_link_libraries(master_worker_v3_35 ${SIMGRID_LIBRARY})

install(TARGETS master_worker_v3_10 DESTINATION bin)
install(TARGETS master_worker_v3_12 DESTINATION bin)
install(TARGETS master_worker_v3_14 DESTINATION bin)
install(TARGETS master_worker_v3_15 DESTINATION bin)
install(TARGETS master_worker_v3_16 DESTINATION bin)
install(TARGETS master_worker_v3_20 DESTINATION bin)
install(TARGETS master_worker_v3_24 DESTINATION bin)
install(TARGETS master_worker_v3_34 DESTINATION bin)
install(TARGETS master_worker_v3_35 DESTINATION bin)
